<resources>
    <string name="app_name">Subimisi Dicoding</string>
    <string name="content_title">This is a title</string>
    <string name="content_desc">This is a description</string>
    <string name="item_home">Home</string>
    <string name="item_favorites">Favorites</string>
    <string name="item_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_no_fav">Your favorite is empty</string>
    <string name="subtitle_no_fav">Go add some of your favorite movies!</string>
    <string name="detail_title">movie_title</string>
    <string name="detail_director">movie_director_name</string>
    <string name="detail_cast">movie_cast_name</string>
    <string name="detail_release_date">movie_release_date</string>
    <string name="detail_genre">movie_genre</string>
    <string name="tv_detail_desc">movie_desc</string>
    <string name="add_favorites">Add to favorites</string>
    <string name="share_movie">Share this movie</string>
    <string name="profile_name">Muhammad Raihan Asyqar</string>
    <string name="profile_email">jombor.army67@gmail.com</string>
</resources>