<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_grey"
    android:padding="15dp"
    tools:ignore="ContentDescription"
    tools:context=".ui.activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_detail_poster"
            android:layout_width="125dp"
            android:layout_height="180dp"
            android:src="@drawable/ic_image_placeholder"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_title"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_detail_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detail_director"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_detail_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/detail_cast"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_detail_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/detail_release_date"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_detail_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/detail_genre"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:padding="10dp">

            <ToggleButton
                android:id="@+id/tb_fav"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:textOn=""
                android:textOff=""
                android:layout_gravity="center"
                android:background="@drawable/fav_button"/>

            <TextView
                android:id="@+id/tv_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                android:text="@string/add_favorites"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:padding="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_share"
                />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:text="@string/share_movie"
                android:textStyle="bold"/>

        </LinearLayout>
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/tv_detail_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/tv_detail_desc"
        android:textSize="16sp"/>

</LinearLayout>